Change page content
Temp message for deployment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages p.</p>
+    <h1>Under construction. . .</h1>
+    <p>finishing soon!</p>
   </body>
 </html>
